Changes to version 2.4-0

  o The R Commander editor for Markdown and knitr documents is now a non-modal dialog, so may remain open while you work.
  
  o Improvement to the barplot dialog (suggestions of Beatriz Lacruz).
  
  o Allow color selection in pie charts.
  
  o Small improvements to activation of menu items.
  
  o Rcmdr showData.threshold option now tests number of rows as well as number of columns.
  
  o Introduced Rcmdr scientific.notation option to suppress scientific notation; corresponds to R scipen option, and default is 5 (as opposed to 0 in R).
  
  o Improved labeling of two-variances test dialog (suggestion of Beatriz Lacruz).
  
  o Improvements to Rcmdr data editor in handling blanks and quotes.
  
  o Moved the following standard packages from Imports: to Depends: graphics, methods, stats.
  
  o Allow entry of variable names in enter table dialog (suggestion of Beatriz Lacruz).
  
  o Improved import of Stata and SPSS data files and provision to import SAS b7dat files.
  
  o Added right-click context menus to text entry boxes.
  
  o Getting Started manual is now supplied as a vignette (with help from Manuel Munoz Marquez).
  
  o Small interface improvements.
  
  o Refactored Commander() code.
  
  o Separators in plug-in menus can now be placed more precisely, if necessary (following a problem reported by Manuel Munoz Marquez).
  
Changes to Version 2.3-2

  o Fixes to Spanish translation (from Manual Munoz Marquez).
  
  o Updated Spanish translation of Getting Started manual (thanks to Manual Munoz Marquez).
  
  o Updated Slovenian translation (thanks to Matjaz Jeran).

Changes to Version 2.3-1

  o Removed dependency of rglwidgets, no longer necessary.
  
  o Fixes to Catalan translation (from Manel Salamero).
  
  o Updated Basque and German translations (thanks to Joserra Rueda and Fritz Leisch).
  
Changes to Version 2.3-0

  o Added .rtf output to options for RMarkdown reports.
  